# CardsForge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
cardforge/: __init__.py  abstractions.py  app.py  cli.py  config.py  registry.py  validators.py
cardforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cardforge/admin/: __init__.py  commands.py  service.py
cardforge/diagnostics/: checklist.py  economy_simulator.py
cardforge/domain/: __init__.py  cards.py  drop_strategies.py  economy.py  events.py  exceptions.py  inventory.py  player.py
cardforge/loaders/: __init__.py  json_loader.py
cardforge/storage/: __init__.py  base.py  memory.py  sqlalchemy.py
cardforge/studio/: main.py
cardforge/telegram/: __init__.py  aiogram_router.py  api_utils.py  filters.py  keyboards.py  minigames.py
cardforge/testing/: __init__.py  factory.py  fixtures.py  test_client.py
docs/en/: architecture.md  beginner_guide.md  core_reference.md  development_guide.md  getting_started.md
docs/ru/: architecture.md  beginner_guide.md  core_reference.md  development_guide.md  getting_started.md
examples/: __init__.py  basic_bot.py
examples/catalog/: cards.json
tests/: test_admin.py  test_formatters.py  test_inventory.py  test_json_loader.py  test_player_service.py  test_telegram_api_utils.py  test_validators.py
